# trak-docker

./: .gitignore
.github/workflows/: docker-publish.yml
trak/: Dockerfile  apt_minimal.sh
trak/training/: pyproject.toml
trak/training/training/: data.py  main.py  params.py  pdpl.py
