[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "training"
version = "0.1.0"
description = "Training utilities for deep learning"
requires-python = ">=3.10"
dependencies = [

]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
]

[tool.hatch.build.targets.wheel]
packages = ["training"]

[tool.hatch.metadata]
allow-direct-references = true